xul2: use JS_NewCompartmentAndGlobalObject

Use JS_NewCompartmentAndGlobalObject rather than JS_NewGlobalObject
to be sure that cx->compartment is not NULL when initializing context.
It basicaly does the same, but it creates a temporary compartment
before creating the global object, and then restore the previous one.
This avoids a segfault with xulrunner from hg

https://bugzilla.gnome.org/show_bug.cgi?id=639691